--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     </div>
 
-		<div class="carousel-item" style = "background-image: url('Assets/sname.PNG') ">
+		<div class="carousel-item" style = "background-image: url('Assets/sname.png') ">
 				<h1>Sname</h1>
 
 
