--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     </div>
 
 		<div class="carousel-item" style = "background-image: url('Assets/sname2.png') ">
+			<div class = "sname">
 				<h1>Sname</h1>
+			</div>
 
 
   </div>
