--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,8 @@
 
 		</div>
 
-		<div class = "contact" style = "background-image: url('Assets/me.jpg') ">
+		<div class = "about" style = "background-image: url('Assets/me.jpg') ">
+			<p> An enthusiastic, self-motivated final year student at the University of Lincoln studying Computer Science (BSc) with strong experience in C#, C++, HTML, CSS, JavaScript and the development of applications for desktop, mobile devices and web. Self-taught Python and Unity for the purposes of producing a final year thesis and completed a three month internship at Experian as a data management intern producing an Alteryx tool using Python. This would be an excellent opportunity to apply and improve on skills acquired throughout University in a positive working environment.  </p>
 
 
 
