--- a/contactinfo.html
+++ b/contactinfo.html
@@ -17,7 +17,7 @@
 
 		</div>
 
-		<div class = "contact" style = "background-image: url('Assets/contact.jpg') ">
+		<div class = "contact" style = "background-image: url('Assets/contact2.jpg') ">
 			<p>Contact Info</p>
 			<div class="grid-container">
 			  <div class="grid-item"><img src="Assets/linkedin.png" width="100%"></div>
