--- a/contactinfo.html
+++ b/contactinfo.html
@@ -20,7 +20,7 @@
 		<div class = "contact" style = "background-image: url('Assets/contact2.jpg') ">
 			<p>Contact Info</p>
 			<div class="grid-container">
-			  <div class="grid-item"><img src="Assets/linkedin.png" width="100%"></div>
+			  <div class="grid-item"><a href = "https://www.linkedin.com/in/elliott-mcdonald-3636ba186" > <img src="Assets/linkedin.png" width="100%"></a></div>
 			  <div class="grid-item"><img src="Assets/phone.png" width="50%"></div>
 			  <div class="grid-item"><img src="Assets/email.png" width="90%"></div>
 			</div>
