--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		  <h1>Elliott McDonald Portfolio</h1>
 			<ol>
 				<li><a href = "index.html">Projects</a></li>
-				<li><a href = "aboutme.html">About Me</a></li>
 				<li><a href = "contactinfo.html">Contact Info</a></li>
 			</ol>
 
@@ -20,15 +19,7 @@
 
 		<input type="image" src="Assets/up.png" onclick="prevFunction()"  id="upBtn"/>
 
-		<div class="header">
-			  <h1>Elliott McDonald Portfolio</h1>
-				<ol>
-					<li><a href = "index.html"> Projects</a></li>
-					<li><a href = "aboutme.html">About Me</a></li>
-					<li><a href = "contactinfo.html">Contact Info</a></li>
-				</ol>
 
-			</div>
 
 			<div class = "about" style = "background-image: url('Assets/me.jpg') ">
 				<p> An enthusiastic, self-motivated final year student at the University of Lincoln studying Computer Science (BSc) with strong experience in C#, C++, HTML, CSS, JavaScript and the development of applications for desktop, mobile devices and web. Self-taught Python and Unity for the purposes of producing a final year thesis and completed a three month internship at Experian as a data management intern producing an Alteryx tool using Python. This would be an excellent opportunity to apply and improve on skills acquired throughout University in a positive working environment.  </p>
@@ -37,50 +28,72 @@
 
 			</div>
 
-		<div class = "cathedral" style = "background-image: url('Assets/Cathedral.jpg') ">
-				<h1>Lincoln Cathedral AR</h1>
+		<div class = "image-box-1 mobile-image" style = "background-image: url('Assets/Cathedral.jpg') ">
 				<video height="80%"  controls>
 				<source src="Assets/AR.mp4" type="video/mp4">
 				</video>
-				<p>This application was developed as my dissertation project for University. I created an augmented reality application for Lincoln Cathedral using
-					Googles ARCore and Unity. Many sections were created through combining Unitys physics engine capabilities with ARCore elements to augment objects
-				and allow the user to iteract with them.</p>
+
+		</div>
+
+		<div class = "text-box-1 mobile-text">
+			<h1>Lincoln Cathedral AR</h1>
+			<p>This application was developed as my dissertation project for University. I created an augmented reality application for Lincoln Cathedral using
+				Googles ARCore and Unity. Many sections were created through combining Unitys physics engine capabilities with ARCore elements to augment objects
+			and allow the user to iteract with them.</p>
+
+		</div>
+
+
+		<div class = "text-box-2 mobile-text" top = 200%>
+			<h1>My Food Tracker</h1>
+			<p>I developed this app for a cross-platform development module at university. We used react-native combined with DOM elements to produce the application
+			Each application needed to be related to one specific area in particular and mine was sustainability. I created an application that allowed the user to store information
+			about items they had bought that would expire. The app uses various API's to access the device calendar, notification system and camera to allow users to store these items and
+			send reminders that will let them know when their items expire.</p>
+		</div>
+
+		<div class = "image-box-2 mobile-image"  style = "background-image: url('Assets/banana.jpg') " top = 200%>
+
+				<video height="80%" controls>
+				<source src="Assets/food tracker.mp4" type="video/mp4">
+				</video>
+
+
+    </div>
+
+
+
+		<div class = "image-box-1 mobile-image" style = "background-image: url('Assets/conc3.jpg') " top = 300%>
+			<video height="74%" width="90%" controls>
+			<source src="Assets/RHCP website.mp4" type="video/mp4">
+			</video>
+
+		</div>
+
+		<div class = "text-box-1 mobile-text" top = 300%>
+			<h1>Red Hot Chili Peppers Website</h1>
+			<p>This website was created in my first semester of University. We were taught to use HTML, CSS and Javascript to produe a website
+			that included a section for customisation using javascript. One of the main features of this website is the use of cookies and js to customise and
+			save designs of guitars that the user can make.</p>
 		</div>
 
 
 
-		<div class = "food-tracker"  style = "background-image: url('Assets/banana.jpg') ">
-				<h1>My Food Tracker</h1>
-				<video height="80%" controls>
-				<source src="Assets/food tracker.mp4" type="video/mp4">
-				</video>
-				<p>I developed this app for a cross-platform development module at university. We used react-native combined with DOM elements to produce the application
-				Each application needed to be related to one specific area in particular and mine was sustainability. I created an application that allowed the user to store information
-			about items they had bought that would expire. The app uses various API's to access the device calendar, notification system and camera to allow users to store these items and
-		send reminders that will let them know when their items expire.</p>
 
-    </div>
 
-			<div class = "rhcp-site" style = "background-image: url('Assets/conc3.jpg') ">
-				<h1>Red Hot Chili Peppers Website</h1>
-				<video height="64%" width="48%" controls>
-				<source src="Assets/RHCP website.mp4" type="video/mp4">
-				</video>
-				<p>This website was created in my first semester of University. We were taught to use HTML, CSS and Javascript to produe a website
-				that included a section for customisation using javascript. One of the main features of this website is the use of cookies and js to customise and
-			save designs of guitars that the user can make.</p>
-			</div>
+		<div class = "text-box-2 mobile-text" top = 400%>
+			<h1>Sname</h1>
+			<p>I have been creating this game in my free time using Unity and C#. The aim of the game is to fire the snail as far as you can to get new power ups and
+			items to travel even further.</p>
+		</div>
+
+		<div class = "image-box-2 image-text" style = "background-image: url('Assets/sname2.png') " top = 400%>
+
+		</div>
 
 
 
-
-
-
-			<div class = "sname" style = "background-image: url('Assets/sname2.png') ">
-				<h1>Sname</h1>
-			</div>
-
-			<input type="image" src="Assets/down.png" onclick="nextFunction()"  id="downBtn"/>
+		<input type="image" src="Assets/down.png" onclick="nextFunction()"  id="downBtn"/>
 
 
 
