--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 
 			</div>
 
+			<div class = "text-box-1 mobile-text">
+				<h1>Lincoln Cathedral AR</h1>
+				<p>This application was developed as my dissertation project for University. I created an augmented reality application for Lincoln Cathedral using
+					Googles ARCore and Unity. Many sections were created through combining Unitys physics engine capabilities with ARCore elements to augment objects
+				and allow the user to iteract with them.</p>
+
+			</div>
+
 		<div class = "image-box-1 mobile-image" style = "background-image: url('Assets/Cathedral.jpg') ">
 				<video height="80%"  controls>
 				<source src="Assets/AR.mp4" type="video/mp4">
@@ -35,13 +43,7 @@
 
 		</div>
 
-		<div class = "text-box-1 mobile-text">
-			<h1>Lincoln Cathedral AR</h1>
-			<p>This application was developed as my dissertation project for University. I created an augmented reality application for Lincoln Cathedral using
-				Googles ARCore and Unity. Many sections were created through combining Unitys physics engine capabilities with ARCore elements to augment objects
-			and allow the user to iteract with them.</p>
 
-		</div>
 
 
 		<div class = "text-box-2 mobile-text" top = 200%>
@@ -62,6 +64,12 @@
     </div>
 
 
+		<div class = "text-box-1 mobile-text" top = 300%>
+			<h1>Red Hot Chili Peppers Website</h1>
+			<p>This website was created in my first semester of University. We were taught to use HTML, CSS and Javascript to produe a website
+			that included a section for customisation using javascript. One of the main features of this website is the use of cookies and js to customise and
+			save designs of guitars that the user can make.</p>
+		</div>
 
 		<div class = "image-box-1 mobile-image" style = "background-image: url('Assets/conc3.jpg') " top = 300%>
 			<video height="74%" width="90%" controls>
@@ -70,12 +78,7 @@
 
 		</div>
 
-		<div class = "text-box-1 mobile-text" top = 300%>
-			<h1>Red Hot Chili Peppers Website</h1>
-			<p>This website was created in my first semester of University. We were taught to use HTML, CSS and Javascript to produe a website
-			that included a section for customisation using javascript. One of the main features of this website is the use of cookies and js to customise and
-			save designs of guitars that the user can make.</p>
-		</div>
+
 
 
 
@@ -87,7 +90,7 @@
 			items to travel even further.</p>
 		</div>
 
-		<div class = "image-box-2 image-text" style = "background-image: url('Assets/sname2.png') " top = 400%>
+		<div class = "image-box-2 mobile-image" style = "background-image: url('Assets/sname2.png') " top = 400%>
 
 		</div>
 
