--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
 		<div class = "text-box-1 mobile-text" top = 300%>
-			<h1>Red Hot Chili Peppers Website</h1>
+			<h1>Red Hot Chili Peppers</h1>
 			<p>This website was created in my first semester of University. We were taught to use HTML, CSS and Javascript to produe a website
 			that included a section for customisation using javascript. One of the main features of this website is the use of cookies and js to customise and
 			save designs of guitars that the user can make.</p>
