--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 
 		</div>
 
+		<div id="mySidenav" class="sidenav">
+	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	  <a href="#">About</a>
+	  <a href="#">Services</a>
+	  <a href="#">Clients</a>
+	  <a href="#">Contact</a>
+	</div>
+
+	<!-- Use any element to open the sidenav -->
+
+	<input type ="image" src ="Assets/menu.png" onclick="openNav()" id="menu">
+
 
 		<input type="image" src="Assets/up.png" onclick="prevFunction()"  id="upBtn"/>
 
@@ -77,10 +89,6 @@
 			</video>
 
 		</div>
-
-
-
-
 
 
 
