--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
 
 		<div id="mySidenav" class="sidenav">
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	  <a href="#">About</a>
-	  <a href="#">Services</a>
-	  <a href="#">Clients</a>
-	  <a href="#">Contact</a>
+	  <a href="index.html">Projects</a>
+	  <a href="contactinfo.html">Contact Info</a>
+
 	</div>
 
 	<!-- Use any element to open the sidenav -->
 
-	<input type ="image" src ="Assets/menu.png" onclick="openNav()" id="menu">
+	<input type ="image" src ="Assets/menu.png" onclick="openNav()" id="menu" width="15%">
 
 
 		<input type="image" src="Assets/up.png" onclick="prevFunction()"  id="upBtn"/>
