--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 			</div>
 
-		<div class = "image-box-1 mobile-image" style = "background-image: url('Assets/Cathedral.jpg') ">
+		<div class = "image-box-1 mobile-image" style = "background-image: url('Assets/Cathedral2.jpg') ">
 				<video height="80%"  controls>
 				<source src="Assets/AR.mp4" type="video/mp4">
 				</video>
@@ -65,7 +65,7 @@
 			send reminders that will let them know when their items expire.</p>
 		</div>
 
-		<div class = "image-box-2 mobile-image"  style = "background-image: url('Assets/banana.jpg') " top = 200%>
+		<div class = "image-box-2 mobile-image"  style = "background-image: url('Assets/fod.jpg') " top = 200%>
 
 				<video height="80%" controls>
 				<source src="Assets/food tracker.mp4" type="video/mp4">
@@ -97,7 +97,7 @@
 			items to travel even further.</p>
 		</div>
 
-		<div class = "image-box-2 mobile-image" style = "background-image: url('Assets/sname2.png') " top = 400%>
+		<div class = "image-box-2 mobile-image" style = "background-image: url('Assets/sname3.png') " top = 400%>
 
 		</div>
 
