--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 		<div class = "text-box-2 mobile-text" top = 400%>
-			<h1>Sname</h1>
+			<h1>Catapult the snail</h1>
 			<p>I have been creating this game in my free time using Unity and C#. The aim of the game is to fire the snail as far as you can to get new power ups and
 			items to travel even further.</p>
 		</div>
