--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<ol>
 				<li><a href = "index.html">Projects</a></li>
 				<li><a href = "contactinfo.html">Contact Info</a></li>
+				<li><a href = "CV.html">CV</a></li>
 			</ol>
 
 		</div>
@@ -20,6 +21,7 @@
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	  <a href="index.html">Projects</a>
 	  <a href="contactinfo.html">Contact Info</a>
+		<a href = "CV.html">CV</a>
 
 	</div>
 
