--- a/CV.html
+++ b/CV.html
@@ -30,6 +30,6 @@
 	<input type ="image" src ="Assets/menu.png" onclick="openNav()" id="menu" width="15%">
   <div class ="CV">
 
-  <embed src="Assets/Elliott McDonald CV.pdf"/>
+  <iframe src="Assets/Elliott McDonald CV.pdf"/>
   </div>
 </body>
