--- a/CV.html
+++ b/CV.html
@@ -8,16 +8,16 @@
 
 <body background-color="#afeeee">
 	<div class="header">
-		  <h1>Elliott McDonald Portfolio</h1>
-			<ol>
-				<li><a href = "index.html">Projects</a></li>
-				<li><a href = "contactinfo.html">Contact Info</a></li>
-				<li><a href = "CV.html">CV</a></li>
-			</ol>
+	  <h1>Elliott McDonald Portfolio</h1>
+		<ol>
+			<li><a href = "index.html">Projects</a></li>
+			<li><a href = "contactinfo.html">Contact Info</a></li>
+			<li><a href = "CV.html">CV</a></li>
+		</ol>
 
-		</div>
+	</div>
 
-		<div id="mySidenav" class="sidenav">
+	<div id="mySidenav" class="sidenav">
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	  <a href="index.html">Projects</a>
 	  <a href="contactinfo.html">Contact Info</a>
@@ -30,6 +30,9 @@
 	<input type ="image" src ="Assets/menu.png" onclick="openNav()" id="menu" width="15%">
   <div class ="CV">
 
-  <iframe src="Assets/Elliott McDonald CV.pdf"/>
+  	<iframe src="Assets/Elliott McDonald CV.pdf"/></iframe>
   </div>
+	<script src="Java/scroll.js"></script>
 </body>
+
+</html>
