--- a/contactinfo.html
+++ b/contactinfo.html
@@ -7,32 +7,45 @@
 </head>
 
 <body>
-	<div class="header">
-		  <h1>Elliott McDonald Portfolio</h1>
-			<ol>
-				<li><a href = "index.html"> Projects</a></li>
-				<li><a href = "contactinfo.html">Contact Info</a></li>
-			</ol>
+<div class="header">
+	  <h1>Elliott McDonald Portfolio</h1>
+		<ol>
+			<li><a href = "index.html">Projects</a></li>
+			<li><a href = "contactinfo.html">Contact Info</a></li>
+			<li><a href = "CV.html">CV</a></li>
+		</ol>
 
+	</div>
+
+	<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="index.html">Projects</a>
+  <a href="contactinfo.html">Contact Info</a>
+	<a href = "CV.html">CV</a>
+
+</div>
+
+<!-- Use any element to open the sidenav -->
+
+<input type ="image" src ="Assets/menu.png" onclick="openNav()" id="menu" width="15%">
+
+	<div class = "contact" style = "background-image: url('Assets/contact2.jpg') ">
+		<p>Contact Info</p>
+		<div class="grid-container">
+		  <div class="grid-item"><a href = "https://www.linkedin.com/in/elliott-mcdonald-3636ba186" > <img src="Assets/linkedin.png" width="100%"></a></div>
+		  <div class="grid-item"><img src="Assets/phone.png" width="50%"></div>
+		  <div class="grid-item"><img src="Assets/email.png" width="90%"></div>
 		</div>
 
-		<div class = "contact" style = "background-image: url('Assets/contact2.jpg') ">
-			<p>Contact Info</p>
-			<div class="grid-container">
-			  <div class="grid-item"><a href = "https://www.linkedin.com/in/elliott-mcdonald-3636ba186" > <img src="Assets/linkedin.png" width="100%"></a></div>
-			  <div class="grid-item"><img src="Assets/phone.png" width="50%"></div>
-			  <div class="grid-item"><img src="Assets/email.png" width="90%"></div>
-			</div>
-
-			<div class="grid-container-2">
-			  <div class="grid-item">LinkedIn</div>
-			  <div class="grid-item">07896217796</div>
-			  <div class="grid-item">Elliottmcd1998@hotmail.co.uk</div>
-			</div>
-
-
+		<div class="grid-container-2">
+		  <div class="grid-item">LinkedIn</div>
+		  <div class="grid-item">07896217796</div>
+		  <div class="grid-item">Elliottmcd1998@hotmail.co.uk</div>
 		</div>
 
-  </body>
+
+	</div>
+	<script src="Java/scroll.js"></script>
+</body>
 
 </html>
