--- a/index.html
+++ b/index.html
@@ -33,13 +33,21 @@
 		<input type="image" src="Assets/up.png" onclick="prevFunction()"  id="upBtn"/>
 
 
+		<div class = "text-box-2 mobile-text" top = 200%>
+			<h1>About me</h1>
+			<p>An enthusiastic, self-motivated final year student at the University of Lincoln studying Computer Science (BSc) with strong experience in C#, C++, HTML, CSS, JavaScript and the development of applications for desktop, mobile devices and web. Self-taught Python and Unity for the purposes of producing a final year thesis and completed a three month internship at Experian as a data management intern producing an Alteryx tool using Python. This would be an excellent opportunity to apply and improve on skills acquired throughout University in a positive working environment.</p>
+		</div>
 
-			<div class = "about" style = "background-image: url('Assets/me.jpg') ">
-				<p> An enthusiastic, self-motivated final year student at the University of Lincoln studying Computer Science (BSc) with strong experience in C#, C++, HTML, CSS, JavaScript and the development of applications for desktop, mobile devices and web. Self-taught Python and Unity for the purposes of producing a final year thesis and completed a three month internship at Experian as a data management intern producing an Alteryx tool using Python. This would be an excellent opportunity to apply and improve on skills acquired throughout University in a positive working environment.  </p>
+		<div class = "image-box-2 mobile-image" background="#afe4ee">
+
+			<img src="Assets/me logo3.png" width="60%">
 
 
 
-			</div>
+
+		</div>
+
+
 
 			<div class = "text-box-1 mobile-text">
 				<h1>Lincoln Cathedral AR</h1>
