--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
 			<img src="Assets/me logo3.png" width="60%">
 
 
-
-
 		</div>
-
 
 
 			<div class = "text-box-1 mobile-text">
@@ -63,8 +60,6 @@
 				</video>
 
 		</div>
-
-
 
 
 		<div class = "text-box-2 mobile-text" top = 200%>
@@ -108,6 +103,9 @@
 		</div>
 
 		<div class = "image-box-2 mobile-image" style = "background-image: url('Assets/sname3.png') " top = 400%>
+			<video height="74%" width="90%" controls>
+			<source src="Assets/sname.mkv" type="video/mp4">
+			</video>
 
 		</div>
 
