--- a/contactinfo.html
+++ b/contactinfo.html
@@ -38,9 +38,9 @@
 		</div>
 
 		<div class="grid-container-2">
-		  <div class="grid-item">LinkedIn</div>
-		  <div class="grid-item">07896217796</div>
-		  <div class="grid-item">Elliottmcd1998@hotmail.co.uk</div>
+		  <div class="grid-item-2">LinkedIn</div>
+		  <div class="grid-item-2">07896217796</div>
+		  <div class="grid-item-2">Elliottmcd1998@hotmail.co.uk</div>
 		</div>
 
 
