--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 		<div class = "image-box-1 mobile-image" style = "background-image: url('Assets/Cathedral2.jpg') ">
 				<video height="80%"  controls>
-				<source src="Assets/AR.mp4" type="video/mp4">
+				<source src="Assets/cathedralvid.mp4" type="video/mp4">
 				</video>
 
 		</div>
